# python

./: README.md
graphql/: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
graphql/app/core/: config.py  exceptions.py
graphql/app/database/core/: connection.py  context.py  db.py  session.py
graphql/app/database/sql/: script.sql  setup.sql
graphql/app/domain/builders/: contribuinte_builder.py  danfe_builder.py  endereco_builder.py
graphql/app/domain/repositories/: contribuinte_repository.py  danfe_repository.py  endereco_repository.py
graphql/app/domain/services/: contribuinte_service.py  danfe_service.py  endereco_service.py
graphql/app/presentation/: graphql_router.py
graphql/app/presentation/decorators/: relay_connection_decorator.py
graphql/app/presentation/dtos/: contribuinte_dto.py  danfe_dto.py  endereco_dto.py
graphql/app/presentation/enums/: endereco_enum.py
graphql/app/presentation/filters/: contribuinte_filter.py  danfe_filter.py  endereco_filter.py
graphql/app/presentation/inputs/: contribuinte_input.py  danfe_input.py  endereco_input.py
graphql/app/presentation/resolvers/: contribuinte_resolver.py  danfe_resolver.py  endereco_resolver.py
graphql/app/presentation/types/: contribuinte_type.py  danfe_type.py  endereco_type.py
graphql/notas_fiscais/: .gitignore  README.md  main.py  requirements.txt
graphql/notas_fiscais/app/: main.py
graphql/notas_fiscais/sql/: script.sql  setup.sql
web-scraping/atualizar-indicadores/: Investimento.py  Investimento.xlsx  README.md  gitignore  investimento.py  pyproject.toml
(+411 files in other folders)
