[project]
name = "atualizar-indicadores"
version = "0.1.0"
description = "Script de web scraping para atualização de indicadores financeiros"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "selenium>=4.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "isort"
]

# Black
[tool.black]
line-length = 79
target-version = ["py313"]

# isort
[tool.isort]
profile = "black"
line_length = 79

# Flake8
[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]